@startuml
title UML Data Model — Filtered Mapping

entity tasks {
  * id : String <<PK>>
  --
  * title : String
  description : String
  creation_date : Timestamp
  due_date : Date
  priority : String
  status : String
  recurrence_type : String
  recurrence_interval : int
  parent_task_id : String <<FK>>
  project_id : String <<FK>>
  type : String <<discriminator>>
}

entity projects {
  * id : String <<PK>>
  --
  * name : String
  description : String
}

entity tags {
  * id : String <<PK>>
  --
  * name : String
}

entity task_tags {
  * task_id : String <<FK>>
  * tag_id : String <<FK>>
}

entity collaborators {
  * id : String <<PK>>
  --
  * name : String
  * type : String <<discriminator>>
}

entity assignments {
  * id : String <<PK>>
  --
  * task_id : String <<FK>>
  * collaborator_id : String <<FK>>
}

entity project_collaborators {
  * project_id : String <<FK>>
  * collaborator_id : String <<FK>>
}

entity activities {
  * id : String <<PK>>
  --
  * timestamp : Timestamp
  * description : String
  * task_id : String <<FK>>
}

' Relationships
tasks }o--|| projects : project_id
tasks }o--o| tasks : parent_task_id
tasks ||--o{ task_tags : task_id
tags ||--o{ task_tags : tag_id
tasks ||--o{ assignments : task_id
collaborators ||--o{ assignments : collaborator_id
projects ||--o{ project_collaborators : project_id
collaborators ||--o{ project_collaborators : collaborator_id
tasks ||--o{ activities : task_id

@enduml